--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 name = "reduce-do"
-# route = { pattern = "*/*", zone_name = "templates.do" }
+route = { pattern = "*/*", zone_name = "reduce.do" }
 main = "worker.js"
 usage_model = "unbound"
 compatibility_date = "2022-09-23"
